--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
+    "nodemailer": "^6.9.5",
     "stripe": "^13.6.0"
-
   }
 }
